clippin of moon icon fixed

--- a/src/styles/theme/ThemeToggleButton.module.css
+++ b/src/styles/theme/ThemeToggleButton.module.css
@@ -46,23 +46,29 @@
   width: 1rem;
   height: 1rem;
   background-size: cover;
-  transition: opacity 0.1s ease-in;
+  transition: opacity 0.1s ease-in, visibility 0s 0.1s;
 }
 
 .darkModeSwitch .sunIcon {
   background-image: url("../../assets/other/sun.png");
   right: 7px;
   opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.1s ease-in, visibility 0s 0.1s;
 }
 
 .darkModeSwitch .moonIcon {
   background-image: url("../../assets/other/moon.png");
   left: 7px;
   opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.1s ease-in, visibility 0s 0.5s;
 }
 
 .darkModeSwitch .visible {
   opacity: 1;
+  visibility: visible;
+  transition: opacity 0.2s ease-in, visibility 0s;
 }
 
 /* Desktop */
